[package]
name = "osus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
nom = "7.1.1"
nom_locate = "4.0.0"
thiserror = "1.0.31"

[dev-dependencies]
clap = { version = "4.0.18", features = ["derive"] }
walkdir = "2.3.2"
