[package]
name = "osus-cli"
version = "0.1.0"
description = "Various osu! utilities."
authors = ["Speykious <speykious@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
osus = { path = "../osus" }
walkdir = "2.3.2"

# Make target file smaller by not generating debug symbols.
# If somehow a problem occurs in a dependency, we can comment it out temporarily.
[profile.dev.package."*"]
debug = false
opt-level = 2
