[package]
name = "osus-cli"
version = "0.1.0"
description = "Various osu! utilities."
authors = ["Speykious <speykious@gmail.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
osus = { path = "../osus" }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5"

# Make target file smaller by not generating debug symbols.
# If somehow a problem occurs in a dependency, we can comment it out temporarily.
[profile.dev.package."*"]
debug = false
opt-level = 2
