[package]
name = "osus"
version = "0.1.0"
description = "Library for various osu! utilities and scripts."
authors = ["Speykious <speykious@gmail.com>"]
edition = "2021"

[dependencies]
error-stack = "0.1.1"
thiserror = "1.0.31"
tracing = "0.1.40"

# Make target file smaller by not generating debug symbols.
# If somehow a problem occurs in a dependency, we can comment it out temporarily.
[profile.dev.package."*"]
debug = false
opt-level = 2
